--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "promise-mysql": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
